[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prim-mst-visualized"
dynamic = ["version"]
description = "Навчальна реалізація та покрокова візуалізація алгоритму Прима (мінімальне остовне дерево)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Maryna Shavlak", email = "shavlakmaryna@gmail.com" }]
keywords = ["prim", "minimum-spanning-tree", "mst", "graph", "greedy", "algorithms", "education", "visualization"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Education",
    "Intended Audience :: Education",
]
dependencies = [
    "matplotlib>=3.5",
    "networkx>=2.6",
    "pillow>=9.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
# Рендер анімацій у .mp4 без системного ffmpeg (через бінарник із imageio-ffmpeg).
# Базова установка лишається легкою: без цього extra збираються лише GIF.
video = [
    "imageio-ffmpeg>=0.4",
]

[tool.setuptools]
packages = ["prim_mst"]

# Версію не дублюємо: єдине джерело — prim_mst.__version__ (у __init__.py).
[tool.setuptools.dynamic]
version = { attr = "prim_mst.__version__" }
